force-app/main/default/objects/zisf__zicCleanJob__c/zisf__zicCleanJob__c.object-meta.xml
<CustomObject>
    <label>Clean Job</label>
    <nameField>
        <label>Clean Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clean Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>