force-app/main/default/objects/zisf__zicCleanJob__c/fields/zisf__DateTime_Finished__c.field-meta.xml
<CustomField>
    <fullName>zisf__DateTime_Finished__c</fullName>
    <label>DateTime Finished</label>
    <type>DateTime</type>
</CustomField>