force-app/main/default/objects/zisf__zicCleanJob__c/fields/zisf__DateTime_Submitted__c.field-meta.xml
<CustomField>
    <fullName>zisf__DateTime_Submitted__c</fullName>
    <label>DateTime Submitted</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>