force-app/main/default/objects/zisf__zicCleanJob__c/fields/zisf__Errors__c.field-meta.xml
<CustomField>
    <fullName>zisf__Errors__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>