force-app/main/default/objects/zisf__zicCleanJob__c/fields/zisf__Errors_logs__c.field-meta.xml
<CustomField>
    <fullName>zisf__Errors_logs__c</fullName>
    <label>Error Logs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>