force-app/main/default/objects/zisf__zicCleanJob__c/fields/zisf__fields_updated__c.field-meta.xml
<CustomField>
    <fullName>zisf__fields_updated__c</fullName>
    <label>Fields Updated</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>