force-app/main/default/objects/zisf__zicCleanJob__c/fields/zisf__logs__c.field-meta.xml
<CustomField>
    <fullName>zisf__logs__c</fullName>
    <label>Logs</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>